// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`fixtures > select/basic.sql 1`] = `
"select
  id,
  title,
  price
from books
where in_stock = true
order by price asc;

select
  b.id,
  b.title,
  a.first_name,
  a.last_name
from books as b
join authors as a on b.author_id = a.id
where b.price < 50;
"
`;

exports[`shared fixtures > dml/delete.sql 1`] = `
"delete from books
where in_stock = 0
and price < 5;
"
`;

exports[`shared fixtures > dml/insert.sql 1`] = `
"insert into books (title, author_id, price, in_stock)
select
  ;;
"
`;

exports[`shared fixtures > dml/update.sql 1`] = `
"update books
set
  price = price * 0.9,
  in_stock = 1
where author_id = 1
and price > 20;
"
`;

exports[`shared fixtures > select/aggregates.sql 1`] = `
"select
  author_id,
  count(*) as book_count,
  avg(price) as avg_price
from books
where in_stock = 1
group by author_id
having count(*) > 5
order by book_count desc;
"
`;

exports[`shared fixtures > select/basic.sql 1`] = `
"select
  id,
  title,
  price
from books
where in_stock = 1
order by price asc;

select
  id,
  title,
  price
from books
where in_stock = 1
and price < 50
order by price desc;
"
`;

exports[`shared fixtures > select/case.sql 1`] = `
"select
  id,
  case
    when price < 10 then 'Budget'
    when price < 30 then 'Mid'
  else 'Premium'
  end as tier
from books;

select
  id,
  case genre_id
    when 1 then 'Fiction'
    when 2 then 'Non-Fiction'
  else 'Other'
  end as genre
from books;
"
`;

exports[`shared fixtures > select/cte.sql 1`] = `
"with
  top_authors as (
    select
      author_id,
      count(*) as book_count
    from books
    group by author_id
    having count(*) > 5;
  )
select
  a.first_name,
  a.last_name,
  t.book_count
from authors as a
join top_authors as t on a.id = t.author_id
order by t.book_count desc;
"
`;

exports[`shared fixtures > select/joins.sql 1`] = `
"select
  b.id,
  b.title,
  a.first_name,
  a.last_name
from books as b
join authors as a on b.author_id = a.id;

select
  b.title,
  a.first_name
from books as b
left join authors as a on b.author_id = a.id
where a.id is null;

select
  b.title,
  a.first_name
from books as b
full join authors as a on b.author_id = a.id;
"
`;

exports[`shared fixtures > select/subqueries.sql 1`] = `
"select
  id,
  title
from books
where (
  select id
  from authors
  where country = 'USA';
);

select
  id,
  title
from books
where exists (
  select 1
  from order_items
  where order_items.book_id = books.id;
);

select
  id,
  title
from books
where not (
  select author_id
  from banned_authors;
);
"
`;
